--- a/umka/src/main/resources/templates/doctor.html
+++ b/umka/src/main/resources/templates/doctor.html
@@ -32,12 +32,12 @@
                     <td>Санаторно-курортное лечение</td>
                 </tr>
                 <tr>
-                    <td><a th:href="@{/patients/2}">Печкин Анатолий Сергеевич</a></td>
+                    <td><a th:href="@{/doctor/patients/qq}">Печкин Анатолий Сергеевич</a></td>
                     <td>12%</td>
                     <td>Не требуется</td>
                 </tr>
                 <tr>
-                    <td><a th:href="@{/patients/3}">Меньшикова Инна Петровна</a></td>
+                    <td><a th:href="@{/doctor/patients/qq}">Меньшикова Инна Петровна</a></td>
                     <td>73%</td>
                     <td>Возможно амбулаторное лечение</td>
                 </tr>
